--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3"
+    "react-hook-form": "^7.44.3",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
